@@ -37,7 +37,6 @@ import org.jenetics.util.Factory;
 
 /**
  * @author <a href="mailto:franz.wilhelmstoetter@gmx.at">Franz Wilhelmstötter</a>
- * @version <em>$Date: 2014-10-19 $</em>
  */
 public class CharacterGeneTest extends GeneTester<CharacterGene> {
 
@@ -53,7 +52,7 @@ public class CharacterGeneTest extends GeneTester<CharacterGene> {
 
 			final Factory<CharacterGene> factory = CharacterGene.of(characters);
 
-			final Histogram<Long> histogram = Histogram.of(0L, 10L, 10);
+			final Histogram<Long> histogram = Histogram.ofLong(0L, 10L, 10);
 
 			final int samples = 100000;
 			for (int i = 0; i < samples; ++i) {
@@ -79,14 +78,14 @@ public class CharacterGeneTest extends GeneTester<CharacterGene> {
 	public void testCharacterGeneCharacter() {
 		CharacterGene gene = CharacterGene.of('4');
 
-		assertEquals(new Character('4'), gene.getAllele());
+		assertEquals(Character.valueOf('4'), gene.getAllele());
 	}
 
 	@Test
 	public void testGetCharacter() {
 		CharacterGene gene = CharacterGene.of('6');
 
-		assertEquals(new Character('6'), gene.getAllele());
+		assertEquals(Character.valueOf('6'), gene.getAllele());
 	}
 
 	@Test
