@@ -30,7 +30,6 @@ import org.jenetics.util.MSeq;
 
 /**
  * @author <a href="mailto:franz.wilhelmstoetter@gmx.at">Franz Wilhelmstötter</a>
- * @version <em>$Date: 2014-06-02 $</em>
  */
 public class EnumGeneTest extends GeneTester<EnumGene<Integer>> {
 
@@ -57,11 +56,11 @@ public class EnumGeneTest extends GeneTester<EnumGene<Integer>> {
 
 		Assert.assertEquals(alleles.length(), length);
 		for (int i = 0; i < alleles.length(); ++i) {
-			Assert.assertEquals(alleles.get(i), new Integer(i));
+			Assert.assertEquals(alleles.get(i), Integer.valueOf(i));
 		}
 
 		for (int i = 0; i < alleles.length(); ++i) {
-			Assert.assertEquals(new EnumGene<>(i, alleles).getAllele(), new Integer(i));
+			Assert.assertEquals(new EnumGene<>(i, alleles).getAllele(), Integer.valueOf(i));
 			Assert.assertSame(new EnumGene<>(i, alleles).getValidAlleles(), alleles);
 		}
 	}
