@@ -19,6 +19,8 @@
  */
 package org.jenetics.util;
 
+import java.lang.reflect.InvocationTargetException;
+
 import org.testng.Assert;
 import org.testng.annotations.Test;
 
@@ -26,15 +28,11 @@ import org.jenetics.internal.util.require;
 
 /**
  * @author <a href="mailto:franz.wilhelmstoetter@gmx.at">Franz Wilhelmstötter</a>
- * @version <em>$Date: 2014-08-05 $</em>
  */
 public class StaticObjectTest {
 
 	@Test
-	public void instantiation()
-		throws InstantiationException, IllegalAccessException
-	{
-
+	public void constructorInstantiation() throws Exception {
 		try {
 			new SomeStaticObject();
 			Assert.assertFalse(true);
@@ -46,17 +44,20 @@ public class StaticObjectTest {
 
 			Assert.assertEquals(e.getMessage(), expected);
 		}
+	}
 
+	@Test
+	public void reflectiveInstantiation() throws Exception {
 		try {
-			SomeStaticObject.class.newInstance();
+			SomeStaticObject.class.getDeclaredConstructor().newInstance();
 			Assert.assertFalse(true);
-		} catch (AssertionError e) {
+		} catch (InvocationTargetException e) {
 			final String expected = String.format(
 				"Instantiation of '%s' is not allowed.",
 				"org.jenetics.util.SomeStaticObject"
 			);
 
-			Assert.assertEquals(e.getMessage(), expected);
+			Assert.assertEquals(e.getTargetException().getMessage(), expected);
 		}
 	}
 
